Revised multitask nets experiments.

--- a/config.ini
+++ b/config.ini
@@ -8,29 +8,29 @@ TRUMP_S = trump_acceptance_speech
 CLINTON_S = clinton_acceptance_speech
 TRUMP_I = trump_inauguration
 
-tr_all_anns = ../../data/transcripts_all_sources
-tr_cb_anns = ../../data/transcripts_cb
-word_clouds_dir = ../../reports/word_clouds/
-pr_curves_dir = ../../reports/pr_curves_cb_svmcb_svmrank/
-sentiment_lex = ../../data/dicts/NRC.txt
-stopwords = ../../data/dicts/stopwords.txt
-negative_vocab = ../../data/dicts/negative_vocab.txt
-contradictions_file = ../../data/dicts/contradictions.txt
-precomputed = ../../data/precomputed/
-precomputed_vectors = ../../data/precomputed/precomputed_w2v.tsv
-precomputed_train_search = ../../data/precomputed/precomputed_train_search.tsv
-svm_rank_learn = ../../libs/svm_rank/svm_rank_learn
-svm_rank_classify = ../../libs/svm_rank/svm_rank_classify
-svm_rank_train = ../../libs/svm_rank/train.dat
-svm_rank_test = ../../libs/svm_rank/test.dat
-svm_rank_model = ../../libs/svm_rank/model
-svm_rank_pred = ../../libs/svm_rank/predictions
-svm_rank = ../../libs/svm_rank/
-w2v = ../../data/GoogleNews-vectors-negative300.bin.gz
-lda_model = ../../data/lda_docs/lda_model
-lda_dict = ../../data/lda_docs/lda_dict
-feats_dump = ../../data/features_dump
-pf_claims = ../../data/pf_17_12_2016.json
-sentiment_file = ../../data/dicts/sentiment.tsv
-alchemy_ner = ../../data/dicts/alchemy_ner.tsv
-sentiment_lexicons = ../../data/dicts/lexicons
+tr_all_anns = %(home_dir)s/data/transcripts_all_sources
+tr_cb_anns = %(home_dir)s/data/transcripts_cb
+word_clouds_dir = %(home_dir)s/reports/word_clouds/
+pr_curves_dir = %(home_dir)s/reports/pr_curves_cb_svmcb_svmrank/
+sentiment_lex = %(home_dir)s/data/dicts/NRC.txt
+stopwords = %(home_dir)s/data/dicts/stopwords.txt
+negative_vocab = %(home_dir)s/data/dicts/negative_vocab.txt
+contradictions_file = %(home_dir)s/data/dicts/contradictions.txt
+precomputed = %(home_dir)s/data/precomputed/
+precomputed_vectors = %(home_dir)s/data/precomputed/precomputed_w2v.tsv
+precomputed_train_search = %(home_dir)s/data/precomputed/precomputed_train_search.tsv
+svm_rank_learn = %(home_dir)s/libs/svm_rank/svm_rank_learn
+svm_rank_classify = %(home_dir)s/libs/svm_rank/svm_rank_classify
+svm_rank_train = %(home_dir)s/libs/svm_rank/train.dat
+svm_rank_test = %(home_dir)s/libs/svm_rank/test.dat
+svm_rank_model = %(home_dir)s/libs/svm_rank/model
+svm_rank_pred = %(home_dir)s/libs/svm_rank/predictions
+svm_rank = %(home_dir)s/libs/svm_rank/
+w2v = %(home_dir)s/data/GoogleNews-vectors-negative300.bin.gz
+lda_model = %(home_dir)s/data/lda_docs/lda_model
+lda_dict = %(home_dir)s/data/lda_docs/lda_dict
+feats_dump = %(home_dir)s/data/features_dump
+pf_claims = %(home_dir)s/data/pf_17_12_2016.json
+sentiment_file = %(home_dir)s/data/dicts/sentiment.tsv
+alchemy_ner = %(home_dir)s/data/dicts/alchemy_ner.tsv
+sentiment_lexicons = %(home_dir)s/data/dicts/lexicons
