--- a/config.ini
+++ b/config.ini
@@ -20,8 +20,8 @@ sentiment_lex = %(data)s/dicts/NRC.txt
 stopwords = %(data)s/dicts/stopwords.txt
 negative_vocab = %(data)s/dicts/negative_vocab.txt
 contradictions_file = %(data)s/dicts/contradictions.txt
-chunk_parses = %(data)s/discourse/chunk_parses_new.txt
-sentence_parses = %(data)s/discourse/sent_parses_new.txt
+chunk_parses = %(data)s/discourse/chunk_parses.txt
+sentence_parses = %(data)s/discourse/sent_parses.txt
 qatar_lexicons = %(data)s/dicts/lexicons
 w2v = %(data)s/GoogleNews-vectors-negative300.bin.gz
 lda_model = %(data)s/lda_docs/lda_model
@@ -30,6 +30,7 @@ pf_claims = %(data)s/pf_17_12_2016.json
 sentiment_file = %(data)s/dicts/sentiment.tsv
 alchemy_ner = %(data)s/dicts/alchemy_ner.tsv
 sentiment_lexicons = %(data)s/dicts/lexicons
+parses = %(data)s/parses/
 
 # reports
 word_clouds_dir = %(project_path)s/reports/word_clouds/
